--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,8 +1,11 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  padding: 15px;
+  text-align: left;
+}
+
+h1 {
+  margin: 0;
 }
 
 .logo {
